<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Recipe" Id="{2065798b-e446-4a94-ba0f-3197caff863b}">
    <Declaration><![CDATA[TYPE ST_Recipe :
STRUCT
	RequiredChargedV : REAL := 10; //DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>